// backend.proto
syntax = "proto3";
import "common.proto";

package trueno;

service Backend {
  rpc ListSupportedType (PingRequest) returns (SupportedReply) {}
  rpc ListRunningBackends (PingRequest) returns (RunningReply) {}
  rpc InitializeBackend (BackendRequest) returns (ResultReply) {}
  rpc ListBackend (BackendRequest) returns (RunningReply.Status) {}
  rpc TerminateBackend (BackendRequest) returns (ResultReply) {}
}

message SupportedReply {
  string support = 1;
}

message RunningReply {

  message Status {
    string bid = 1;
    string model = 2;
    string status = 3;
    string msg = 4;
  }

  repeated Status status = 1;
}

message BackendRequest {
  string bid = 1;
  string btype = 2;
}

